--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
+            <version>6.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -48,6 +48,17 @@
     </profile>
     <profile>
      <id>openshift-tomcat6</id>
+     <distributionManagement>
+        <snapshotRepository>
+          <id>nexus-snapshots</id>
+          <url>http://nexus-cicd.cloud.rramalho.com/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+          <id>nexus-releases</id>
+          <name>releases</name>
+          <url>http://nexus-cicd.cloud.rramalho.com/content/repositories/releases/</url>
+        </repository>
+     </distributionManagement>
      <build>
         <finalName>samplewebapp</finalName>
         <plugins>
