--- a/openshift/template/tomcat6-maven-pipeline-example.yaml
+++ b/openshift/template/tomcat6-maven-pipeline-example.yaml
@@ -47,20 +47,20 @@ objects:
   spec:
     tags:
     - annotations:
-        supports: tomcat:6.0.48-jre7,java
+        supports: tomcat:6.0.48,jre7,java
         tags: tomcat,java
-        version: "6.0.48-jre7"
+        version: "6.0.48"
       from:
         kind: DockerImage
-        name: tomcat:6.0.48-jre7
-      name: "6.0.48-jre7"
+        name: docker.io/tomcat:6.0.48-jre7
+      name: "6.0.48"
     - annotations:
         supports: web,java
         tags: tomcat,java
       from:
         kind: ImageStreamTag
-        name: "6.0.48-jre7"
-      name: 6.0.48-jre7
+        name: "6.0.48"
+      name: "6.0.48-jre7"
 - apiVersion: v1
   kind: BuildConfig
   metadata:
