--- a/openshift/template/tomcat6-docker-buildconfig.yaml
+++ b/openshift/template/tomcat6-docker-buildconfig.yaml
@@ -2,8 +2,8 @@ kind: "BuildConfig"
 apiVersion: "v1"
 metadata:
   labels:
-    app: "openshift-tomcat6-sample-docker"
-  name: "openshift-tomcat6-sample-docker"
+    app: "tomcat6-webapp-docker"
+  name: "tomcat6-webapp-docker"
 spec:
   output:
     to:
@@ -24,4 +24,4 @@ spec:
       env:
         -
           name: MAVEN_MIRROR_URL
-          value: 'http://nexus-cicd.cloud.rramalho.com/'        
+          value: 'http://nexus-cicd.cloud.rramalho.com/'
