--- a/openshift/docker/Dockerfile
+++ b/openshift/docker/Dockerfile
@@ -5,8 +5,8 @@ COPY tomcat6/conf/ $CATALINA_HOME/conf/
 RUN echo "copy 3rd party shared libs"
 COPY tomcat6/lib/ $CATALINA_HOME/lib/
 RUN echo "copy app WAR file from nexus releases public repository"
-#RUN wget -O /tmp/samplewebapp.war http://nexus-cicd.cloud.rramalho.com/content/repositories/releases/com/openshift/samples/samplewebapp/1.0/samplewebapp-1.0.war && \
-RUN wget -O /tmp/samplewebapp.war ${MAVEN_MIRROR_URL}/content/repositories/releases/${projectGroupId}/${projectArtifactFinalName}/${projectArtifactReleaseVersion}/${projectArtifactFinalName}-${projectArtifactReleaseVersion}.war && \
+RUN wget -O /tmp/samplewebapp.war \
+    ${MAVEN_MIRROR_URL}/content/repositories/releases/${projectGroupId}/${projectArtifactFinalName}/${projectArtifactReleaseVersion}/${projectArtifactFinalName}-${projectArtifactReleaseVersion}.war && \
     mv /tmp/samplewebapp.war $CATALINA_HOME/webapps/
 RUN echo "create a non-root tomcat user and change base image permissions for execution on Openshift enviroment..."
 RUN groupadd -g 1001 -r tomcat
